# TemplateLibraryCpp11

./: CMakeLists.txt  README.md
include/: fbn.h  lib.h
src/: fbn.cpp  main.cpp
